--- a/TSW-master/package.json
+++ b/TSW-master/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^4.1.0",
+    "express": "^4.16.3",
     "heapdump": ">=0.3.9",
     "iconv-lite": "^0.4.23",
     "moment": "^2.22.1",
